[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "bangla"
version = "0.0.6"
description = "Bangla is a Python package for converting Gregorian dates to the Bengali calendar, translating English numerals to Bangla numerals, and generating Bangla ordinals for dates."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ahmedur Rahman Shovon", email = "shovon.sylhet@gmail.com"},
]
keywords = ["bangla", "bangla date", "bongabdo", "bangla digit", "bengali calendar", "bengali numerals"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/arsho/bangla"
Repository = "https://github.com/arsho/bangla"

[tool.setuptools.packages.find]
include = ["bangla*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
